--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/shivammeh/shivamweather#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "request": "^2.88.2"
   }
 }
